Add status buttons

--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@
 		
 	</section>
 	<section class="instructions">
-		<div></div>
+		<div>Finished placing ship?
+		<button class="forward" disabled="disabled">Next Ship</button>
+		<button class="reset">Restart</button>
+		</div>
 	</section>
 
 	<section class="player-grid">
