Reorder Reset and Next Ship buttons

--- a/index.html
+++ b/index.html
@@ -161,9 +161,10 @@
 		
 	</section>
 	<section class="instructions">
-		<div>Finished placing ship?
+		<div>Click grid below to place ship
+		<button class="reset">Reset Ship</button>
 		<button class="forward" disabled="disabled">Next Ship</button>
-		<button class="reset">Restart</button>
+		
 		</div>
 	</section>
 
