Change placement instructions

--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<!-- //create 10x10 player grid
-//create 10x10 tracking grid (small)
-
-//create ships
-//randomize ship position-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -161,7 +156,7 @@
 		
 	</section>
 	<section class="instructions">
-		<div>Click grid below to place ship
+		<span>Click grid below to place carrier</span>
 		<button class="reset">Reset Ship</button>
 		<button class="forward" disabled="disabled">Next Ship</button>
 		
